--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -9,7 +9,7 @@
 
 {% block body_block %}
 
-<a href="{% url 'feed:add_post' 0 %}">add post</a>
+<a href="{% url 'feed:add_post' %}">add post</a>
 <div id="postPics">
 <table>
 
