--- a/templates/feed/picDetail.html
+++ b/templates/feed/picDetail.html
@@ -47,7 +47,7 @@
                     <a href="" id="name">{{creator.name}}</a>
                     <div id="authorOpera">
                         <a class="button" href="{% url 'feed:follow_user' post.creator.username  %}">Follow</a>
-                        <a class="button" href="">Attempt</a>
+                        <a class="button" href="{% url 'feed:add_post' post.id %}">Attempt</a>
                     </div>
                 </div>
                 
