--- a/static/css/addPost.css
+++ b/static/css/addPost.css
@@ -58,7 +58,7 @@
     border-bottom: 50px solid rgb(255, 255, 255);
 }
 
-#page #detail #frame #authorCom .Allopera #choose #chooseButton {
+#page #detail #frame #authorCom .Allopera #choose {
     font-size: 20px;
     color: #000000;
     outline: none;
