--- a/templates/feed/addPost.html
+++ b/templates/feed/addPost.html
@@ -11,90 +11,48 @@
 {% block body_block %}
 <link rel="stylesheet" href="/static/css/addPost.css" type="text/css">
 
+<br><br>
 <form method="post" enctype="multipart/form-data" action="{% url 'feed:add_post' %}">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
         {{ hidden }}
     {% endfor %}
-    <div>
-    
+    <div id = "page">
+        <div id="detail"><div id="frame">
+            <div id="pic">
+                {{ form.picture.errors }}
+                {{ form.picture }}
+            </div>
+            <div id="authorCom">
+                <div class="Allopera">
+                    <div id="choose">
+                            {{ category_form.category }}
+                            {{ category_form.errors}}
+                    </div>
+                </div>
             <div class="input-box">
                 <span class="details">Add your title</span>
                 {{ form.title.errors }}
                 {{ form.title }}
             </div>
-            <div id="pic">
-                {{ form.picture.errors }}
-                {{ form.picture }}
-            </div>
+            
             <div>
                 <span class="input-box">Tell everyone what your picture is about</span>
                 {{ form.comment }}
                 {{ form.comment.errors }}
             </div>
-            <div>
-                {{ category_form.category }}
-                {{ category_form.errors}}
+            
+            {% for field in form %}
+            {% for error in field.errors %}
+                <small style="color:red;">{{ error }}</small>
+            {% endfor %}
+            {% endfor %}
+            <div class="button">
+                <input type="submit" name="submit" value="Post">
             </div>
-        </div>
+        </div></div></div>
     </div>
-    {% for field in form %}
-    {% for error in field.errors %}
-        <small style="color:red;">{{ error }}</small>
-    {% endfor %}
-  {% endfor %}
-  <div class="button">
-      <input type="submit" name="submit" value="Post">
-  </div>
 </form>
 
-<br><br>
-<div id="page">
-<div id="detail">
-    <div>
-        <a href=""><img src="{% static 'images/back.png' %}" alt="back" /></a>
-    </div>
-    <div id="frame">
-        <div id="pic">
-            <form><input type="file" id="file"></form>
-        </div>
-        <div id="authorCom">
-            <div class="Allopera">
-                <div id="choose">
-                    <select id="chooseButton">
-                        <option value="Craft">Craft</option>
-                        <option value="DIY">DIY</option>
-                        <option value="Food">Food</option>
-                    </select>
-                </div>
-                <div id="more">
-                    <a href=""><img src="{% static 'images/more.png' %}" alt="more" /></a>
-                </div>
-            </div>
-            <div id="author">
-                <form id="titleText" action="">
-                    <input type="text" name="titleText" value="Add your title" onfocus="this.value=''"
-                        onblur="if(this.value==''){this.value='Add your title'}">
-                </form>
-                <div id="authorFrame">
-                    <a href=""><img id="authorProfile" src="{{ MEDIA_URL }}profile.png" alt="authorProfile" /></a>
-                    <div id="authorDetail">
-                        <span id="name">Name</span>
-                    </div>
-                </div>
-                <form id="descriText" action="">
-                    <input type="text" name="descriText" value="Tell every one what your picture is about" onfocus="this.value=''"
-                        onblur="if(this.value==''){this.value='Tell every one what your picture is about'}">
-                </form>
-            </div>
-            <div id="save">
-                <div id="saveFrame">
-                    <a href="" id="saveButton">Save</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
 <br><br>
 {% endblock %}
