--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -42,12 +42,15 @@
                                 </form>
                             </div>
                         </div>
+                        <div class="rowline" id="cat" style="width:150px">
+                            <a href="{% url 'feed:add_post' %}" class="otherButton" style = "background-color: #e23c3c; border-color: #e23c3c;">Add post</a>
+                        </div>
                         <div id="login_signup">
                             <link rel="preconnect" href="https://fonts.googleapis.com">
                             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
                             <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
                             {% if user.is_authenticated %}
-                                <a href="{% url 'feed:account' user.username %}" class="lsTest">Hi, {{ user }}</a>
+                                <a href="{% url 'feed:account' user.username %}" class="lsText">Hi, {{ user }}</a>
                                 <div id="topLine"></div>
                                 <a href="{% url 'feed:logout' %}" class="lsText">&nbsp&nbspLogout</a>
                             {% else %}
