--- a/templates/feed/attempts.html
+++ b/templates/feed/attempts.html
@@ -6,4 +6,27 @@
 {% endblock %}
 
 {% block body_block %}
+<table>
+    {% if posts %}
+    {% for post_row in posts}
+    <tr>
+        {% for post in post_row %}
+        <td>
+            <div class="picLine">
+                <div class="pic" style="height: 600px;">
+                    <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
+                        src="{{ post.picture.url }}" alt="Image of {{ post.title }}"></a>
+                    <div class="allPicOpera">
+                        <img class="heartButton" id="{{ post.id }}" width="25px" src="{% static 'images/heart2.png' %}" alt="heart" />
+                        <img src="{% static 'images/chat-bubble-dots.png' %}" alt="chat-bubble-dots" />
+                    </div>
+                </div>
+            </div>
+            </td>
+    </tr>
+    {% endfor %}
+    {% else %}
+        You haven't attempted anything yet!
+    {% endif %}
+</table>
 {% endblock %}
