changed text on help page

--- a/templates/feed/help.html
+++ b/templates/feed/help.html
@@ -8,6 +8,11 @@
 
 {% block body_block %}
 <div style="height: 500px;">
-    <span style="font-size: 30px; font-weight: 900;">Here is Help page.</span>
+    <span style="font-size: 30px; font-weight: 900;">Here is Help page:</span>
+	<ul>
+		<li> Click on your account to see your posts, attempts, followers and who you are  </li>
+		<li> Clicking on the big 'DITry' button takes you back to the homepage </li>
+		<li> Click on a post to like a post, comment on it or follow its creator </li>
+	</ul>
 </div>
 {% endblock %}
