--- a/templates/feed/contact_us.html
+++ b/templates/feed/contact_us.html
@@ -8,8 +8,9 @@
 
 {% block body_block %}
     <!--very cool body, asking whoever clicked on this section to please not contact us very kindly :)-->
-    <h1>Very cool!</h1>
+    
 <div style="height: 500px;">
-    <span style="font-size: 30px; font-weight: 900;">Here is contact us page.</span>
+    <span style="font-size: 20px; font-weight: 400;">Here is contact us page.</span>
+	<span style="font-size: 20px; font-weight: 400;">Currently there is no way of contacting us.</span>
 </div>
 {% endblock %}
