users personal page looking good now

--- a/templates/feed/personalPage.html
+++ b/templates/feed/personalPage.html
@@ -70,6 +70,8 @@
             {% else %}
                 No folders found.
             {% endif %}
+        </div>
+        <div id="postPics">
             <table>
                 {% for post_row in posts %}
                     <tr>
