--- a/templates/feed/userFollowing.html
+++ b/templates/feed/userFollowing.html
@@ -1,4 +1,4 @@
-{% extends 'feed/base.html' %}
+{% extends 'feed/personalPage.html' %}
 {% load staticfiles %}
 
 
@@ -6,7 +6,7 @@
     Following
 {% endblock %}
 
-{% block body_block %}
+{% block content-block %}
 <link rel="stylesheet" href="/static/css/userFollowing.css" type="text/css">
 <div id="frame">
     <div id="tipText"><span>You follow...</span></div>
