--- a/static/css/picDetail.css
+++ b/static/css/picDetail.css
@@ -1,10 +1,10 @@
-#page #detail{
+#page #detail {
     display: flex;
     justify-content: space-around;
     width: 1000px;
 }
 
-#page #detail #frame{
+#page #detail #frame {
     box-shadow: rgb(119, 119, 119) 10px 10px 50px 5px;
     width: 900px;
     border-radius: 30px;
@@ -14,21 +14,21 @@
     border-right: 10px solid rgb(255, 255, 255);
 }
 
-#page #detail #frame #pic{
+#page #detail #frame #pic {
     align-self: center;
     width: 450px;
 }
 
-#page #detail #frame #pic a img{
+#page #detail #frame #pic a img {
     width: 400px;
     border-radius: 20px;
 }
 
-#page #detail #frame #pic a img:hover{
+#page #detail #frame #pic a img:hover {
     border: 1px solid #4F81FF;
 }
 
-#page #detail #frame #authorCom{
+#page #detail #frame #authorCom {
     width: 420px;
 }
 
@@ -40,7 +40,7 @@
     align-items: flex-end;
 }
 
-#page #detail #frame #authorCom .Allopera .normal{
+#page #detail #frame #authorCom .Allopera .normal {
     background-color: rgb(255, 255, 255);
     color: #707070;
     font-size: 25px;
@@ -50,39 +50,39 @@
     justify-content: space-around;
 }
 
-#page #detail #frame #authorCom .Allopera .normal a img{
+#page #detail #frame #authorCom .Allopera .normal a img {
     width: 35px;
 }
 
-#page #detail #frame #authorCom .Allopera #download a img{
+#page #detail #frame #authorCom .Allopera #download a img {
     width: 35px;
     background-color: rgb(255, 255, 255);
     display: flex;
     align-self: flex-end;
 }
 
-#page #detail #frame #authorCom .Allopera .normal a img:hover ,#page #detail #frame #authorCom .Allopera #download a img:hover{
+#page #detail #frame #authorCom .Allopera .normal a img:hover,
+#page #detail #frame #authorCom .Allopera #download a img:hover {
     width: 36px;
 }
 
-
-#page #detail #frame #authorCom #author{
+#page #detail #frame #authorCom #author {
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: row;
 }
 
-#page #detail #frame #authorCom #author a #authorProfile{ 
+#page #detail #frame #authorCom #author a #authorProfile {
     width: 120px;
     border: 20px solid rgb(255, 255, 255);
 }
 
-#page #detail #frame #authorCom #author #authorDetail{
+#page #detail #frame #authorCom #author #authorDetail {
     border: 20px solid rgb(255, 255, 255);
     width: 240px;
 }
 
-#page #detail #frame #authorCom #author #authorDetail #name{
+#page #detail #frame #authorCom #author #authorDetail #name {
     word-wrap: break-word;
     font-size: 30px;
     font-weight: 900;
@@ -90,24 +90,24 @@
     color: black;
 }
 
-#page #detail #frame #authorCom #author #authorDetail #location{
+#page #detail #frame #authorCom #author #authorDetail #location {
     display: flex;
     align-items: center;
 }
 
-#page #detail #frame #authorCom #author #authorDetail #location #locationText{
+#page #detail #frame #authorCom #author #authorDetail #location #locationText {
     border: 10px solid rgb(255, 255, 255);
     opacity: 0.5;
     font-size: 8px;
 }
 
-#page #detail #frame #authorCom #author #authorDetail #authorOpera{
+#page #detail #frame #authorCom #author #authorDetail #authorOpera {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-#page #detail #frame #authorCom #author #authorDetail #authorOpera .button{
+#page #detail #frame #authorCom #author #authorDetail #authorOpera .button {
     border: 5px solid;
     border-left: 26px solid;
     border-right: 26px solid;
@@ -117,15 +117,15 @@
     border-color: #16A082;
     color: #ffffff;
     text-decoration: none;
-    background-color:#16A082 ;
+    background-color: #16A082;
     font-weight: 900;
 }
 
-#page #detail #frame #authorCom #author #authorDetail #authorOpera .button:hover{
+#page #detail #frame #authorCom #author #authorDetail #authorOpera .button:hover {
     font-size: 16px;
 }
 
-#page #detail #frame #description{
+#page #detail #frame #description {
     word-wrap: break-word;
     font-size: 30px;
     font-weight: 900;
@@ -136,46 +136,46 @@
     border: 20px solid rgb(255, 255, 255);
 }
 
-#page #detail #frame #comments #sumNum{
+#page #detail #frame #comments #sumNum {
     word-wrap: break-word;
     border: 20px solid rgb(255, 255, 255);
     font-size: 20px;
     font-weight: 500;
-
 }
 
-#page #detail #frame #comments .comment{
-    /* background-color: rgb(160, 146, 120); */
+#page #detail #frame #comments .commentStyle {
+    background-color: rgb(160, 146, 120);
     border: 20px solid rgb(255, 255, 255);
     display: flex;
     flex-direction: row;
 }
 
-.otherprofile img{
+.otherprofile img {
     width: 60px;
     border: 10px solid rgb(255, 255, 255);
     border-top: 0px;
     border-left: 0px;
 }
 
-.commFrame{
+.commFrame {
     background-color: rgb(255, 255, 255);
     width: 400px;
     height: 60px;
     border: 1.5px solid rgb(70, 70, 70);
     border-radius: 20px;
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     flex-direction: column;
     opacity: 0.4;
 }
 
-.commFrame:hover,#page #detail #frame #myComment input:hover{
+.commFrame:hover,
+#page #detail #frame #myComment input:hover {
     border: 2px solid #4F81FF;
     opacity: 1;
 }
 
-#page #detail #frame #comments .comment .commFrame a{
+#page #detail #frame #comments .comment .commFrame a {
     text-decoration: none;
     border: 7px solid rgb(255, 255, 255);
     border-radius: 20px;
@@ -184,22 +184,22 @@
     color: black;
 }
 
-#page #detail #frame #comments .comment .commFrame .commentText{
+#page #detail #frame #comments .comment .commFrame .commentText {
     border-left: 7px solid rgb(255, 255, 255);
     border-radius: 20px;
     font-size: 10px;
-    overflow:auto; 
+    overflow: auto;
 }
 
-#page #detail #frame #myComment{
+#page #detail #frame #myComment {
     border: 20px solid rgb(255, 255, 255);
     display: flex;
     flex-direction: row;
     align-self: flex-end;
-    align-items: center; 
+    align-items: center;
 }
 
-#page #detail #frame #myComment input{
+#page #detail #frame #myComment input {
     height: 50px;
     width: 303px;
     font-weight: 900px;
@@ -210,6 +210,5 @@
     border-radius: 20px;
     opacity: 0.4;
     color: black;
-    transform: translate(0px,-8px);
+    transform: translate(0px, -8px);
 }
-
