tests, and I found an actual problem so testing was semi-worth it

--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -42,9 +42,11 @@
                                 </form>
                             </div>
                         </div>
+                        {% if user.is_authenticated %}
                         <div class="rowline" id="cat" style="width:150px">
                             <a href="{% url 'feed:add_post' %}" class="otherButton" style = "background-color: #e23c3c; border-color: #e23c3c;">Add post</a>
                         </div>
+                        {% endif %}
                         <div id="login_signup">
                             <link rel="preconnect" href="https://fonts.googleapis.com">
                             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
