small change in addPost.html

--- a/templates/feed/addPost.html
+++ b/templates/feed/addPost.html
@@ -28,6 +28,7 @@
             <div id="authorCom">
                 <div class="Allopera">
                     <div id="choose">
+							<span class="category type">Choose the category </span>
                             {{ category_form.category }}
                             {{ category_form.errors}}
                     </div>
