--- a/templates/feed/otherUserPage.html
+++ b/templates/feed/otherUserPage.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Your page
+    Account page {{show_user.username}}
 {% endblock %}
 
 {% block body_block %}
