slight fix to addfolder

--- a/templates/feed/add_folder.html
+++ b/templates/feed/add_folder.html
@@ -9,7 +9,7 @@
     <head>
     <meta charset="UTF-8">
       <title>
-          Register
+         Add Folder 
       </title>
     <link rel="stylesheet" href="/static/css/addPost.css" type="text/css">
     <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
