--- a/templates/feed/picDetail.html
+++ b/templates/feed/picDetail.html
@@ -54,7 +54,8 @@
                 </div>
                 
             </div>
-            <div id="description">{{post.title}}</div>
+			<div id="title">{{post.title}}</div>
+            <div id="description">{{post.description}}</div>
             <div id="comments"></div>
 			<div id="sumNum">{{comments.count}} Comments</div>
                 <div class="commFrame">
