--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -54,7 +54,7 @@
                             {% if user.is_authenticated %}
                                 <a href="{% url 'feed:account' user.username %}" class="lsText">Hi, {{ user }}</a>
                                 <div id="topLine"></div>
-                                <a href="../../change-password" class="lsText">Change Password</a>
+                                <a href="../../change-password" class="lsText2">Change Password</a>
                                 <div id="topLine"></div>
                                 <a href="{% url 'feed:logout' %}" class="lsText">&nbsp&nbspLogout</a>
                             {% else %}
