--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -26,22 +26,23 @@
             <td>
             <div class="picLine">
                 <div class="pic" style="height: 600px;">
-                    <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
+                    <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365px; height: 600px; object-fit: cover;"
                         src="{{ post.picture.url }}" alt="Image of {{ post.title }}"></a>
                     <div class="allPicOpera">
                         <a href="{% url 'feed:account' post.creator.username %}">
                         {% if post.creator.profile_picture %}
-                        <img  style="transform: translate(5px,2px); object-fit: cover;width:45px; height:45px;border-radius: 50%;"
+                        <img class = "authPic"
                                 src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
                                 
                             		
                         {% else %}
-                            <img style="transform: translate(5px,2px); object-fit: cover;width:45px; height:45px; border-radius: 50%;"
+                            <img class = "authPic"
                                 src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
                                     
                             
-                        </a>	
+                        	
                         {% endif %}
+                        </a>
                         <a href="{% url 'feed:account' post.creator.username %}" class="authorName">{{ post.creator.username }}</a>
                         {% if user.is_authenticated %}
                             <a href = "{% url 'feed:like_post' post.id %}">
